--- a/Translations/de_DE/messages.ini
+++ b/Translations/de_DE/messages.ini
@@ -1,7 +1,7 @@
-mautic.config.tab.friendlycaptcha_config="Friendly Captcha Settings"
+mautic.config.tab.friendlycaptcha_config="Friendly Captcha Einstellungen"
 mautic.integration.friendlycaptcha.site_key="Site Key"
 mautic.integration.friendlycaptcha.secret_key="Api Key"
-mautic.integration.friendlycaptcha.failure_message="Captcha verification failed. Please contact the site owner."
+mautic.integration.friendlycaptcha.failure_message="Captcha-Übeprüfung fehlgeschlagen. Bitte kontaktieren Sie den Webseitenbetreiber."
 mautic.plugin.actions.friendlycaptcha="Friendly Captcha"
 mautic.friendlycaptcha.version="Friendly Captcha version"
 mautic.friendlycaptcha.v1="Friendly Captcha v1"
