add select for captcha challenge start mode

--- a/Translations/en_US/messages.ini
+++ b/Translations/en_US/messages.ini
@@ -6,3 +6,8 @@ mautic.plugin.actions.friendlycaptcha="Friendly Captcha"
 mautic.friendlycaptcha.version="Friendly Captcha version"
 mautic.friendlycaptcha.v1="Friendly Captcha v1"
 mautic.friendlycaptcha.v2="Friendly Captcha v2"
+mautic.friendlycaptcha.mode="The mode of the challenge"
+mautic.friendlycaptcha.mode.tooltip="'auto' starts validating right away, 'focus' on form element focus and 'none' on user interaction."
+mautic.friendlycaptcha.mode.auto="auto"
+mautic.friendlycaptcha.mode.focus="focus"
+mautic.friendlycaptcha.mode.none="none"
