--- a/Translations/de_DE/messages.ini
+++ b/Translations/de_DE/messages.ini
@@ -6,3 +6,8 @@ mautic.plugin.actions.friendlycaptcha="Friendly Captcha"
 mautic.friendlycaptcha.version="Friendly Captcha version"
 mautic.friendlycaptcha.v1="Friendly Captcha v1"
 mautic.friendlycaptcha.v2="Friendly Captcha v2"
+mautic.friendlycaptcha.mode="Modus der Challenge"
+mautic.friendlycaptcha.mode.tooltip="'auto' validiert sofort, 'focus' wenn ein Formelement fokussiert wird  and 'none' nach Nutzerinteraktion."
+mautic.friendlycaptcha.mode.auto="auto"
+mautic.friendlycaptcha.mode.focus="focus"
+mautic.friendlycaptcha.mode.none="none"
