--- a/Translations/de_DE/messages.ini
+++ b/Translations/de_DE/messages.ini
@@ -1,13 +1,22 @@
 mautic.config.tab.friendlycaptcha_config="Friendly Captcha Einstellungen"
 mautic.integration.friendlycaptcha.site_key="Site Key"
 mautic.integration.friendlycaptcha.secret_key="Api Key"
-mautic.integration.friendlycaptcha.failure_message="Captcha-Übeprüfung fehlgeschlagen. Bitte kontaktieren Sie den Webseitenbetreiber."
+mautic.integration.friendlycaptcha.failure_message="Captcha-Übeprüfung fehlgeschlagen. Bitte kontaktieren Sie den Webseitenbetreiber"
 mautic.plugin.actions.friendlycaptcha="Friendly Captcha"
 mautic.friendlycaptcha.version="Friendly Captcha version"
 mautic.friendlycaptcha.v1="Friendly Captcha v1"
 mautic.friendlycaptcha.v2="Friendly Captcha v2"
-mautic.friendlycaptcha.mode="Modus der Challenge"
-mautic.friendlycaptcha.mode.tooltip="'auto' validiert sofort, 'focus' wenn ein Formelement fokussiert wird  and 'none' nach Nutzerinteraktion."
+mautic.friendlycaptcha.default_embed_type="Embedding type"
+mautic.friendlycaptcha.legacy="Legacy embedding: Mautic bettet alle Skripte automatisch ein. Notwendig für iframes"
+mautic.friendlycaptcha.auto="Automatic embedding: Mautic bettet die Plugin API ein, aber Sie müssen alle Friendly-Captcha-Skripte selbst hinzufügen. EMPFOHLEN"
+mautic.friendlycaptcha.manual="Manual embedding: Sie müssen das Friendly Captcha-Skript und die Add-Captcha-API manuell zu Ihrer Website hinzufügen. Sie haben die volle Kontrolle über das Frontend"
+mautic.friendlycaptcha.embed_type_tooltip="Wählen Sie, wie das Captcha in Ihre Formulare eingebettet wird. Wenn Sie manuelle einbetten, lesen Sie bitte die Dokumentation im Github repository: https://github.com/TAWK-GmbH/mautic-friendlycaptcha"
+mautic.friendlycaptcha.load_delay="Ladeverzögerung beim Einbetten des Captchas"
+mautic.friendlycaptcha.load_delay_tooltip="Wann das Captcha zum DOM hinzugefügt wird. Nur gültig bei Legacy und Automatic embedding"
+mautic.friendlycaptcha.timeout="Zwei Sekunden timeout (Window: setTimeout())"
+mautic.friendlycaptcha.on_script_load="Sobald das Skript geladen ist (HTMLElement: load event listener). EMPFOHLEN"
+mautic.friendlycaptcha.mode="Modus der Friendly Challenge"
+mautic.friendlycaptcha.mode.tooltip="'auto' validiert sofort, 'focus' wenn ein Formelement fokussiert wird und 'none' nach Nutzerinteraktion"
 mautic.friendlycaptcha.mode.auto="auto"
 mautic.friendlycaptcha.mode.focus="focus"
 mautic.friendlycaptcha.mode.none="none"
