--- a/Translations/en_US/messages.ini
+++ b/Translations/en_US/messages.ini
@@ -1,13 +1,22 @@
 mautic.config.tab.friendlycaptcha_config="Friendly Captcha Settings"
 mautic.integration.friendlycaptcha.site_key="Site Key"
 mautic.integration.friendlycaptcha.secret_key="Api Key"
-mautic.integration.friendlycaptcha.failure_message="Captcha verification failed. Please contact the site owner."
+mautic.integration.friendlycaptcha.failure_message="Captcha verification failed. Please contact the site owner"
 mautic.plugin.actions.friendlycaptcha="Friendly Captcha"
 mautic.friendlycaptcha.version="Friendly Captcha version"
 mautic.friendlycaptcha.v1="Friendly Captcha v1"
 mautic.friendlycaptcha.v2="Friendly Captcha v2"
+mautic.friendlycaptcha.default_embed_type="Embedding type"
+mautic.friendlycaptcha.legacy="Legacy embedding: Mautic embeds all scripts automatically. Necessary for iframes"
+mautic.friendlycaptcha.auto="Automatic embedding: Mautic embeds the plugin API, but you need to add all Friendly Captcha scripts yourself. RECOMMENDED"
+mautic.friendlycaptcha.manual="Manual embedding: You need to add the friendly captcha script and the add-captcha api to your website manually. You have full control over the frontend"
+mautic.friendlycaptcha.embed_type_tooltip="Select how the needed scripts are embedded into your website. If you choose automatic or manual embedding, please refer to the documentation in the Github repository: https://github.com/TAWK-GmbH/mautic-friendlycaptcha"
+mautic.friendlycaptcha.load_delay="Load delay when embedding the captcha"
+mautic.friendlycaptcha.load_delay_tooltip="When the captcha is added to the DOM. Only valid with Legacy and Automatic embedding"
+mautic.friendlycaptcha.timeout="Two seconds timeout (Window: setTimeout())"
+mautic.friendlycaptcha.on_script_load="When the script is loaded (HTMLElement: load event listener). RECOMMENDED"
 mautic.friendlycaptcha.mode="The mode of the challenge"
-mautic.friendlycaptcha.mode.tooltip="'auto' starts validating right away, 'focus' on form element focus and 'none' on user interaction."
+mautic.friendlycaptcha.mode.tooltip="'auto' starts validating right away, 'focus' on form element focus and 'none' on user interaction"
 mautic.friendlycaptcha.mode.auto="auto"
 mautic.friendlycaptcha.mode.focus="focus"
 mautic.friendlycaptcha.mode.none="none"
